--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="assets/img/logo.png" class="img-fluid">
+                <img src="assets/img/logo-hari.png" class="image-fluid logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-6">
                     <li class="nav-item">
                         <a class="nav-link" href="#">Acerca de mi</a>
                     </li>
@@ -48,16 +48,14 @@
     <header id="Hero-Section" class="text-light text-end py-5 mt-5">
         <div class="container">
             <div class="ms-auto col-12 col-md-7 ">
-                <h1 class="display-1 fw-bold my-5">
-                    Comidas del fin <br> del mundo
+                <h1 class="display-1 fw-bold my-5 text-dark">
+                    La Gatita <br> Modelo
                 </h1>
-                <p class="my-5">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, accusamus iusto quibusdam
-                    dignissimos labore sequi. Cupiditate reiciendis eius dolore, illum adipisci harum voluptas iste
-                    mollitia inventore provident labore voluptatum nemo.
+                <p class="my-5 text-dark">
+                   Los productos de consumo animal últimamente son muy demandados por la cantidad de personas que han decidido darle la oportunidad a un animalito en su hogar. Las exigencias de calidad y precio, se han visto ligado a la popularidad de los productos es por ello, que se ha creado una necesidad de que sean las mismas mascotas las que den vida a la publicidad y justo allí he encontrado explotar mi potencial.
                 </p>
                 <div class="mb-5 pb-5">
-                    <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
+                    <button class="btn btn-lg btn-outline-info text-light me-4">Sesiones</button>
                     <button class="btn btn-lg btn-info text-light">Contacto</button>
                 </div>
             </div>
