--- a/index.html
+++ b/index.html
@@ -66,43 +66,33 @@
     <section id="Acerca-de-mi" class="container text-center my-5">
 
 
-        <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
+        <h2 class="display-4 fw-bold my-4">Acerca de mi</h2>
 
         <p class="my-4">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam distinctio, odit laborum aliquam
-            earum itaque cum sequi, dolorem optio vol
+            Soy una gatita dedicada al modelaje de ropa para mascotas y cara de distintos productos de consumo felino, adicional he incursionado en memes, stickers y fotos que se suelen enviar entre amigos. No me estreso con fácilidad por lo que puedo trasladarme a realizar sesiones de fotos en cualquier parte del país. A nivel personal, soy muy dulce, cariñosa y altruista ya que permiti a mis humanos que vivieran en mi casa, a veces soy caprichosa pero es que se que soy una princesa y deben tratarme como tal.
         </p>
 
 
         <div class="row">
             <div class="col-12 col-md-4">
                 <i class="fas fa-camera fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Fotógrafa de comida</h3>
+                <h3 class="my-3 fw-bold">Modelo de Empaques</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    Soy la cara de varias marcas de comidas, mi rostro ha sido distribuido en miles de productos vendidos a lo largo del país por lo que es facil reconocerme en la calle. 
                 </p>
             </div>
             <div class="col-12 col-md-4">
                 <i class="fas fa-bullhorn fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Crítica culinaria</h3>
+                <h3 class="my-3 fw-bold">Modelo de Anuncios</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    He participado en videos, reels y sesiones de fotos para publicitar ropa de gatitas de diversos diseñadores. También, he modelado produtos de sponsors como Temu y Shein, lo que ha aumentado significativamente las ventas.  
                 </p>
             </div>
             <div class="col-12 col-md-4">
-                <i class="far fa-map fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Bloggera de viajes</h3>
+                <i class="fas fa-heart fa-3x my-3"></i>
+                <h3 class="my-3 fw-bold">Embajadora</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    Participo activamente en distintas campañas de adopción y proteccción animal, con el fin de crear conciencia respecto a la tenencia responsable y el valor de nuestras vidas en este mundo.
                 </p>
             </div>
         </div>
