--- a/index.html
+++ b/index.html
@@ -99,21 +99,18 @@
     </section>
 
 
-    <section id="Mis-trabajos" class="my-5 p-5 bg-info">
+    <section id="Mis-trabajos" class="my-5 p-5 bg-dark">
 
         <h2 class="display-4 fw-bold text-center text-light mb-3">Mis trabajos</h2>
 
         <div class="row">
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-1.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/modelo-ropa.png)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
+                        <h5 class="card-title fw-bold">Vestuario (Vestido Rosa)</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Explicabo iure sint, perspiciatis distinctio molestias nihil
-                            repudiandae neque rem adipisci repellendus libero illo quo
-                            blanditiis, velit quasi ad, recusandae voluptates officia.
+                            Un vestido versatil ajustado para dar sensasión de libertad y comodidad. Fue uno de los modelos con mayores ventas desde el momento de su promoción, la diseñadora @magentadesigne lo hace a medida de cada solicitante por lo que las tallas no son una limitante. 
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -123,14 +120,11 @@
             </div>
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-2.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/modelo-producto.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Papas del fin del mundo</h5>
+                        <h5 class="card-title fw-bold">Productos de consumo</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Deserunt a culpa doloremque voluptatem dicta nam. Maxime ipsum,
-                            consequatur quos error fuga excepturi quo. Laudantium optio
-                            pariatur laboriosam modi, ea molestias?
+                            Representé la marca Mishi Croquetas, logrando posicionarme en el estandar de una de las modelos más codiciadas por los productores de comida para felinos, logré dar alta popularidad al producto y lo que permitió aumentar sus ventas y la promoción de más de sus productos.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -140,14 +134,11 @@
             </div>
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-3.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/modelo-fotos.jpeg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Salmones de Alaska</h5>
+                        <h5 class="card-title fw-bold">Sesiones de Foto</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Obcaecati facere quibusdam sint id laborum magni velit ducimus
-                            corporis facilis qui architecto dolor, accusamus eveniet
-                            exercitationem fugit. Quod autem neque ducimus.
+                            Me han tomado gran cantidad de sesiones de fotos para distintos propositos, sin embargo disfruto aquellas en que puedo ser espontanea y mostrar la naturalidad de mi belleza. Suelo ser la modelo favorita de los humanos por mis rasgos fotogenicos, algo que ellos adoran.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -163,13 +154,9 @@
 
     <section id="Contacto" class="container my-5">
 
-        <h2 class="display-4 fw-bold text-center my-4">Contáctame</h2>
+        <h2 class="display-5 fw-bold text-center my-4">Para Contrataciones</h2>
 
-        <p class="text-center my-4 d-none d-md-block">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Doloribus
-            sapiente, autem delectus totam expedita
-            animi corporis dolorem qui magnam, aspernatur officiis quasi culpa tempora est commodi. Voluptate beatae
-            tempora quaerat?</p>
+        <p class="text-center my-4 d-none d-md-block">Te puedes contactar directamene con mis humanos para agendar una reunión inicial de factibilidad, la misma es sin costo.</p>
 
         <form>
 
@@ -181,12 +168,12 @@
 
             <div class="form-group mb-4">
                 <label class="mb-2">Correo electrónico</label>
-                <input class="form-control" placeholder="Correo electrónico" />
+                <input class="form-control" placeholder="Deje Aquí su Correo" />
             </div>
 
 
             <div class="form-group">
-                <label class="mb-2">Mensaje</label>
+                <label class="mb-2">Breve Descripción de su Solicitud</label>
                 <textarea class="form-control" placeholder="Escribe aquí tu mensaje"></textarea>
             </div>
 
