ortografia-botones-navlink

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-6">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Acerca de mi</a>
+                        <a class="nav-link" href="#Acerca-de-mi">Acerca de mi</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Trabajos</a>
+                        <a class="nav-link" href="#Mis-trabajos">Trabajos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
+                        <a class="nav-link" href="#Contacto">Contacto</a>
                     </li>
 
                 </ul>
@@ -48,15 +48,15 @@
     <header id="Hero-Section" class="text-light text-end py-5 mt-5">
         <div class="container">
             <div class="ms-auto col-12 col-md-7 ">
-                <h1 class="display-1 fw-bold my-5 text-dark">
+                <h1 class="display-1 fw-bold my-6 text-dark">
                     La Gatita <br> Modelo
                 </h1>
                 <p class="my-5 text-dark">
                    Los productos de consumo animal últimamente son muy demandados por la cantidad de personas que han decidido darle la oportunidad a un animalito en su hogar. Las exigencias de calidad y precio, se han visto ligado a la popularidad de los productos es por ello, que se ha creado una necesidad de que sean las mismas mascotas las que den vida a la publicidad y justo allí he encontrado explotar mi potencial.
                 </p>
-                <div class="mb-5 pb-5">
-                    <button class="btn btn-lg btn-outline-info text-light me-4">Sesiones</button>
-                    <button class="btn btn-lg btn-info text-light">Contacto</button>
+                <div class="mb-4 pb-5">
+                    <button class="btn btn-lg btn-outline-dark text-light me-4">Sesiones</button>
+                    <button class="btn btn-lg btn-dark text-light">Contacto</button>
                 </div>
             </div>
         </div>
@@ -69,7 +69,7 @@
         <h2 class="display-4 fw-bold my-4">Acerca de mi</h2>
 
         <p class="my-4">
-            Soy una gatita dedicada al modelaje de ropa para mascotas y cara de distintos productos de consumo felino, adicional he incursionado en memes, stickers y fotos que se suelen enviar entre amigos. No me estreso con fácilidad por lo que puedo trasladarme a realizar sesiones de fotos en cualquier parte del país. A nivel personal, soy muy dulce, cariñosa y altruista ya que permiti a mis humanos que vivieran en mi casa, a veces soy caprichosa pero es que se que soy una princesa y deben tratarme como tal.
+            Soy una gatita dedicada al modelaje de ropa para mascotas y cara de distintos productos de consumo felino, adicional he incursionado en memes, stickers y fotos que se suelen enviar entre amigos. No me estreso con facilidad por lo que puedo trasladarme a realizar sesiones de fotos en cualquier parte del país. A nivel personal, soy muy dulce, cariñosa y altruista ya que permití a mis humanos que vivieran en mi casa, a veces soy caprichosa pero es que se que soy una princesa y deben tratarse como tal.
         </p>
 
 
@@ -110,7 +110,7 @@
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Vestuario (Vestido Rosa)</h5>
                         <p class="card-text">
-                            Un vestido versatil ajustado para dar sensasión de libertad y comodidad. Fue uno de los modelos con mayores ventas desde el momento de su promoción, la diseñadora @magentadesigne lo hace a medida de cada solicitante por lo que las tallas no son una limitante. 
+                            Un vestido versátil ajustado para dar sensación de libertad y comodidad. Fue uno de los modelos con mayores ventas desde el momento de su promoción, la diseñadora @magentadesigne lo hace a medida de cada solicitante por lo que las tallas no son una limitante. 
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -124,7 +124,7 @@
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Productos de consumo</h5>
                         <p class="card-text">
-                            Representé la marca Mishi Croquetas, logrando posicionarme en el estandar de una de las modelos más codiciadas por los productores de comida para felinos, logré dar alta popularidad al producto y lo que permitió aumentar sus ventas y la promoción de más de sus productos.
+                            Representé la marca Mishi Croquetas, logrando posicionarse en el estándar de una de las modelos más codiciadas por los productores de comida para felinos, logré dar alta popularidad al producto y lo que permitió aumentar sus ventas y la promoción de más de sus productos.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -138,7 +138,7 @@
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Sesiones de Foto</h5>
                         <p class="card-text">
-                            Me han tomado gran cantidad de sesiones de fotos para distintos propositos, sin embargo disfruto aquellas en que puedo ser espontanea y mostrar la naturalidad de mi belleza. Suelo ser la modelo favorita de los humanos por mis rasgos fotogenicos, algo que ellos adoran.
+                            Me han tomado gran cantidad de sesiones de fotos para distintos propósitos, sin embargo disfruto aquellas en que puedo ser espontánea y mostrar la naturalidad de mi belleza. Suelo ser la modelo favorita de los humanos por mis rasgos fotogénicos, algo que ellos adoran.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -156,7 +156,7 @@
 
         <h2 class="display-5 fw-bold text-center my-4">Para Contrataciones</h2>
 
-        <p class="text-center my-4 d-none d-md-block">Te puedes contactar directamene con mis humanos para agendar una reunión inicial de factibilidad, la misma es sin costo.</p>
+        <p class="text-center my-4 d-none d-md-block">Te puedes contactar directamente con mis humanos para agendar una reunión inicial de factibilidad, la misma es sin costo.</p>
 
         <form>
 
@@ -178,7 +178,7 @@
             </div>
 
             <div class="my-3 text-end">
-                <button class="btn btn-info text-light">Enviar</button>
+                <button class="btn btn-dark text-light">Enviar</button>
             </div>
 
 
