--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <h2 class="display-4 fw-bold my-4">Acerca de mi</h2>
 
         <p class="my-4">
-            Soy una gatita dedicada al modelaje de ropa para mascotas y cara de distintos productos de consumo felino, adicional he incursionado en memes, stickers y fotos que se suelen enviar entre amigos. No me estreso con facilidad por lo que puedo trasladarme a realizar sesiones de fotos en cualquier parte del país. A nivel personal, soy muy dulce, cariñosa y altruista ya que permití a mis humanos que vivieran en mi casa, a veces soy caprichosa pero es que se que soy una princesa y deben tratarse como tal.
+            Soy una gatita dedicada al modelaje de ropa para mascotas y cara de distintos productos de consumo felino, adicional he incursionado en memes, stickers y fotos que se suelen enviar entre amigos. No me estreso con facilidad por lo que puedo trasladarme a realizar sesiones de fotos en cualquier parte del país. A nivel personal, soy muy dulce, cariñosa y altruista ya que permití a mis humanos que vivieran en mi casa, a veces soy caprichosa pero es que se que soy una princesa y deben tratarme como tal.
         </p>
 
 
