--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <i class="fas fa-camera fa-3x my-3"></i>
                 <h3 class="my-3 fw-bold">Modelo de Empaques</h3>
                 <p class="my-3">
-                    Soy la cara de varias marcas de comidas, mi rostro ha sido distribuido en miles de productos vendidos a lo largo del país por lo que es facil reconocerme en la calle. 
+                    Soy la cara de varias marcas de comidas, mi rostro ha sido distribuido en miles de productos vendidos a lo largo del país por lo que es fácil reconocerme en la calle. 
                 </p>
             </div>
             <div class="col-12 col-md-4">
@@ -112,7 +112,7 @@
                         <p class="card-text">
                             Un vestido versátil ajustado para dar sensación de libertad y comodidad. Fue uno de los modelos con mayores ventas desde el momento de su promoción, la diseñadora @magentadesigne lo hace a medida de cada solicitante por lo que las tallas no son una limitante. 
                         </p>
-                        <button type="button" class="btn btn-outline-info">
+                        <button type="button" class="btn btn-outline-dark">
                             Ver más
                         </button>
                     </div>
@@ -126,7 +126,7 @@
                         <p class="card-text">
                             Representé la marca Mishi Croquetas, logrando posicionarse en el estándar de una de las modelos más codiciadas por los productores de comida para felinos, logré dar alta popularidad al producto y lo que permitió aumentar sus ventas y la promoción de más de sus productos.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
+                        <button type="button" class="btn btn-outline-dark">
                             Ver más
                         </button>
                     </div>
@@ -140,7 +140,7 @@
                         <p class="card-text">
                             Me han tomado gran cantidad de sesiones de fotos para distintos propósitos, sin embargo disfruto aquellas en que puedo ser espontánea y mostrar la naturalidad de mi belleza. Suelo ser la modelo favorita de los humanos por mis rasgos fotogénicos, algo que ellos adoran.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
+                        <button type="button" class="btn btn-outline-dark">
                             Ver más
                         </button>
                     </div>
@@ -190,7 +190,7 @@
 
 
     <footer class="bg-dark text-center text-light p-4">
-        <p class="mb-0">Hari Guerra 2024. Todos los derechos reservados. Sigueme en Tiktok <a href="https://www.tiktok.com/@harithecat">@Harithecat</a></p>
+        <p class="mb-0">© Hari Guerra 2024. Todos los derechos reservados. Sigueme en Tiktok <a href="https://www.tiktok.com/@harithecat" target="_blank">@Harithecat</a></p>
     </footer>
 
 
